--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -7,6 +7,6 @@
   </head>
 
   <body class="overflow-hidden">
-    <div id="popup" class="flex flex-col h-full"></div>
+    <div id="popup" class="flex flex-col h-full xx-text-slate-200"></div>
   </body>
 </html>
